# prism

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.huggingface  PLAN.md  README.md  alembic.ini  config.yaml  docker-compose.yml  hf-README.md  index.html  project-report-v2.html  project-report-v3.html  project-report.html  pyproject.toml  tech-stack.html
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 37f07358b4c4_add_langsmith_run_id_to_analysis_.py  42f82340ba33_add_applied_hints_to_analysis_versions.py  9430f947f480_initial_schema.py  db12180e63ae_add_improvement_hints_table.py
demo/code/: d9f3a1c.diff
demo/defects/: known_issues.json
docs/: DEMO_SCRIPT.md  PROMPTS.md  index.html  project-report-v3.html  rubric-comparison.html  tech-stack.html
scripts/: seed_demo_data.sh
src/adapters/: base.py
src/adapters/data_sources/: code_changes.py  defect_db.py  log_bundle.py
src/adapters/incident_systems/: jira.py
src/adapters/notifications/: slack.py
src/agents/: chat_agent.py  code_analyst.py  confidence.py  defect_analyst.py  evaluator.py  log_analyst.py  orchestrator.py  synthesizer.py
src/api/: main.py  worker.py
src/api/routes/: actions.py  admin.py  analysis.py  chat.py  evaluation.py  export.py  webhooks.py
src/core/: config.py  database.py  llm.py  token_tracker.py
src/models/: chat.py  evaluation.py  incident.py  metrics.py  report.py
src/outputs/exporters/: pdf_executive.py  pdf_technical.py  pptx_customer.py  pptx_executive.py
tests/: conftest.py
tests/integration/: test_admin_seed.py  test_analysis_api.py  test_evaluation_api.py
tests/unit/: test_code_changes_adapter.py  test_confidence.py  test_defect_db_adapter.py  test_evaluator.py  test_langsmith_feedback.py  test_log_bundle_adapter.py  test_orchestrator_routing.py  test_synthesizer.py  test_token_tracker.py  test_worker_dispatch.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: ActionBar.tsx  ChatPanel.tsx  EvaluationPanel.tsx  IncidentForm.tsx  ReportViewer.tsx  VersionHistory.tsx
ui/src/hooks/: useAnalysis.ts  useChat.ts
(+2 files in other folders)
