[project]
name = "prism"
version = "0.1.0"
description = "AI-powered incident analysis platform"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    # Agents
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.20.0",    # SQLite async driver for HF Spaces / local dev without Postgres
    # Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Export
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # Notifications
    "slack-sdk>=3.33.0",
    "sendgrid>=6.11.0",
    # Vector store
    "chromadb>=0.5.0",
    # Utilities
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "diff-match-patch>=20230430",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
# Install only the provider package you need:
#   uv pip install -e ".[anthropic]"
#   uv pip install -e ".[openai]"
#   uv pip install -e ".[google]"
#   uv pip install -e ".[bedrock]"
anthropic = ["langchain-anthropic>=0.2.0", "anthropic>=0.40.0"]
openai    = ["langchain-openai>=0.2.0", "openai>=1.40.0"]
google    = ["langchain-google-genai>=2.0.0", "google-generativeai>=0.8.0"]
bedrock   = ["langchain-aws>=0.2.0", "boto3>=1.35.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
